[package]
name = "dh-drone-stm32f4-utils"
version = "0.1.2"
authors = ["Dave Hylands <davehylands@fullstory.com>"]
license = "MIT"
keywords = [
    "stm32",
    "cortex",
    "arm",
    "rtos",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = "STM32F4xx utility functions for Drone OS."
homepage = "https://github.com/dhylands/dh-drone-stm32f4-utils"
documentation = "http://dh-drone-stm32f4-utils.davehylands.com/dh_drone_stm32f4_utils/index.html"
repository = "https://github.com/dhylands/dh-drone-stm32f4-utils"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]
heaptrace = ["drone-core/heaptrace"]

[dependencies]
drone-core = { version = "0.12.0" }
drone-cortexm = { version = "0.12.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"] }
drone-stm32-map = { version = "0.12.0", features = ["adc", "dma", "exti", "gpio", "i2c", "tim"] }
futures = { version = "0.3.0", default-features = false }

[profile.release]
lto = true
debug = true
panic = "abort"
